--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf dist coverage",
     "coverage": "jest --coverage",
     "lint": "eslint ./src",
-    "prepublish": "npm run clean && npm run test && npm run build",
+    "prepare": "npm run clean && npm run test && npm run build",
     "start": "webpack-dev-server --config examples/webpack.config.live.babel.js",
     "test": "npm run lint && npm run coverage"
   },
